--- a/views/layout.jade
+++ b/views/layout.jade
@@ -41,7 +41,7 @@ html
                                     span.badge #{myLists.length}
                                 each myList in myLists
                                     li
-                                        a(href="javascript: void(0);") #{myList.title}
+                                        a(href="/lists/#{myList._id}") #{myList.title}
                                 li.divider
                                 li.dropdown-header
                                     | Private - not real
