--- a/views/index.jade
+++ b/views/index.jade
@@ -10,19 +10,30 @@ block content
             form(name="titleForm", ng-submit="saveTitle()" novalidate)
                 h1.text-center
                     .titleTextWrapper(ng-hide="titleInputVisible")
-                        span {{title}}
+                        span {{title || DEFAULT_TITLE}}
                         a(href="javascript: void(0);", ng-click="showTitleInput()").glyphicon.glyphicon-pencil
                     .titleInputWrapper(ng-show="titleInputVisible")
-                        input(id="titleInput", name="titleInput", type="text", ng-model="title")
+                        input(id="titleInput", name="titleInput", type="text", ng-model="title", placeholder="Add a title...")
                         a(href="javascript: void(0);", ng-click="cancelTitleInput()").cancelTitle
                             .glyphicon.glyphicon-remove
                             | cancel
+                    .col-sm-offset-4.alert.alert-danger.alert-dismissable.titleErrorMsg.text-center(ng-show="showTitleErrorMsg", role="alert")
+                        button(type="button", class="close", ng-click="showTitleErrorMsg = false")
+                            span(aria-hidden="true") &times;
+                            span.sr-only Close
+                        | Please enter a title for this list!
 
                 div.checkbox
                     label
                         input(type="checkbox", ng-model="showWeights")
                         | Show Weights
     .row.prosAndCons
+        .col-sm-12
+            .col-sm-offset-4.alert.alert-danger.alert-dismissable.text-center(ng-show="showEmptyErrorMsg", role="alert")
+                button(type="button", class="close", ng-click="showEmptyErrorMsg = false")
+                    span(aria-hidden="true") &times;
+                    span.sr-only Close
+                | Please enter pros or cons to this list!
         #pros.col-sm-5.panel
             form(name="proForm", ng-submit="proForm.$valid && savePro()" novalidate)
                 input(type="submit", style="position: absolute; left: -9999px; width: 1px; height: 1px;")
