--- a/stylus/stylesheets/style.styl
+++ b/stylus/stylesheets/style.styl
@@ -42,6 +42,16 @@ body
   .input-lg
     font-size 30px
 
+  .prosAndCons
+    padding 0 15px
+
+    .panel
+      border-radius 6px
+
+    .glyphicon-trash
+      font-size 16px
+      margin-left 10px
+
 @media only screen and (min-width: 992px)
   div.alert
     font-size 20px
@@ -76,13 +86,3 @@ body
     box-shadow none
     outline none
     width 100%
-
-  .prosAndCons
-    margin 0
-
-    .panel
-      border-radius 6px
-
-    .glyphicon-trash
-      font-size 16px
-      margin-left 10px
