--- a/stylus/stylesheets/style.styl
+++ b/stylus/stylesheets/style.styl
@@ -21,10 +21,12 @@ body
       color black
 
   #pros
-    background-color #DCFCDC
+    background-color #F0FDF0
+    border 1px solid lightgreen
 
   #cons
-    background-color #FDE2E5
+    background-color #FFF5F6
+    border 1px solid lightpink
 
   ul.nav
     .glyphicon
@@ -50,7 +52,7 @@ body
 
     .glyphicon-trash
       font-size 16px
-      margin-left 10px
+      margin-top 3px
 
   .ng-dirty.ng-invalid
     border-color red
