--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -20,10 +20,12 @@ body header a:hover {
   color: #000;
 }
 body #pros {
-  background-color: #dcfcdc;
+  background-color: #f0fdf0;
+  border: 1px solid #90ee90;
 }
 body #cons {
-  background-color: #fde2e5;
+  background-color: #fff5f6;
+  border: 1px solid #ffb6c1;
 }
 body ul.nav .glyphicon {
   margin-right: 5px;
@@ -48,7 +50,7 @@ body .prosAndCons .panel {
 }
 body .prosAndCons .glyphicon-trash {
   font-size: 16px;
-  margin-left: 10px;
+  margin-top: 3px;
 }
 body .ng-dirty.ng-invalid {
   border-color: #f00;
