--- a/stylus/stylesheets/style.styl
+++ b/stylus/stylesheets/style.styl
@@ -59,25 +59,26 @@ body
 
 
 @media (min-width: 980px)
-  div.alert
-    font-size 20px
+  body
+    div.alert
+      font-size 20px
 
-  .jumbotron
-    .glyphicon
-      display inline-block
-      font-size 100px
-      margin-left 50px
+    .jumbotron
+      .glyphicon
+        display inline-block
+        font-size 136px
+        margin-left 50px
 
-      &.glyphicon-thumbs-up
-        margin-left 100px
+        &.glyphicon-thumbs-up
+          margin-left 100px
 
-  header
-    font-size 34px
-
-    input.form-control
+    header
       font-size 34px
 
-  table
-    thead
-      th
-        font-size 25px
+      input.form-control
+        font-size 34px
+
+    table
+      thead
+        th
+          font-size 25px
