--- a/stylus/stylesheets/style.styl
+++ b/stylus/stylesheets/style.styl
@@ -22,11 +22,17 @@ body
 
   #pros
     background-color #F0FDF0
-    border 1px solid lightgreen
+    border 1px solid green
+    
+    tfoot
+      color green
 
   #cons
     background-color #FFF5F6
     border 1px solid lightpink
+
+    tfoot
+      color lightpink
 
   ul.nav
     .glyphicon
@@ -57,7 +63,6 @@ body
   .ng-dirty.ng-invalid
     border-color red
 
-
 @media (min-width: 980px)
   body
     div.alert
@@ -82,3 +87,6 @@ body
       thead
         th
           font-size 25px
+
+    tfoot
+      font-size 25px
