--- a/views/index.jade
+++ b/views/index.jade
@@ -55,6 +55,12 @@ block content
                             th
                                 a(href="javascript: void(0);", ng-click="removePro($index)")
                                     span.glyphicon.glyphicon-trash
+                    tfoot
+                        tr
+                            th(colspan=1) {{pros.length}} Pros
+                            th.text-right(ng-show="showWeights") {{getProsWeightCount()}}
+                            th
+
         #cons.col-sm-5.col-sm-offset-2.panel
             form(name="conForm", ng-submit="conForm.$valid && saveCon()" novalidate)
                 input(type="submit", style="position: absolute; left: -9999px; width: 1px; height: 1px;")
@@ -79,6 +85,11 @@ block content
                             th
                                 a(href="javascript: void(0);" ng-click="removeCon($index)")
                                     span.glyphicon.glyphicon-trash
+                    tfoot
+                        tr
+                            th(colspan=1) {{cons.length}} Pros
+                            th.text-right(ng-show="showWeights") {{getConsWeightCount()}}
+                            th
     .row
         .col-sm-offset-3.col-sm-6
             .alert.alert-danger.alert-dismissable.text-center(ng-show="showEmptyErrorMsg", role="alert")
