--- a/views/index.jade
+++ b/views/index.jade
@@ -39,7 +39,7 @@ block content
                     thead
                         tr
                             th Pros
-                            th(ng-show="showWeights") Weight
+                            th.text-right(ng-show="showWeights") Weight
                     tbody
                         tr
                             th
@@ -69,7 +69,7 @@ block content
                     thead
                         tr
                             th Cons
-                            th(ng-show="showWeights") Weight
+                            th.text-right(ng-show="showWeights") Weight
                     tbody
                         tr
                             th
