quick text change

--- a/views/index.jade
+++ b/views/index.jade
@@ -87,7 +87,7 @@ block content
                                     span.glyphicon.glyphicon-trash
                     tfoot
                         tr
-                            th(colspan=1) {{cons.length}} Pros
+                            th(colspan=1) {{cons.length}} Cons
                             th.text-right(ng-show="showWeights") {{getConsWeightCount()}}
                             th
     .row
