got mongo find by _id working

--- a/views/index.jade
+++ b/views/index.jade
@@ -3,7 +3,7 @@
 
 extend layout
 block scripts
-    script(type="text/javascript", src="scripts/app.js")
+    script(type="text/javascript", src="/scripts/app.js")
 block content
     .row
         .col-sm-12
