--- a/views/layout.jade
+++ b/views/layout.jade
@@ -6,9 +6,9 @@ html
     head
         title Pros v Cons
         //link(rel="stylesheet", href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css")
-        link(rel="stylesheet", href="stylesheets/bootstrap/bootstrap.min.css")
-        link(rel="stylesheet", href="stylesheets/bootstrap/bootstrap-theme.min.css")
-        link(rel="stylesheet", href="stylesheets/style.css")
+        link(rel="stylesheet", href="/stylesheets/bootstrap/bootstrap.min.css")
+        link(rel="stylesheet", href="/stylesheets/bootstrap/bootstrap-theme.min.css")
+        link(rel="stylesheet", href="/stylesheets/style.css")
         meta(name="viewport", content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no")
     body(role="document", ng-app="ProsVCons")
         .navbar.navbar-inverse.navbar-fixed-top(role="navigation")
