trying to get a back end on this thing

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -24,9 +24,9 @@ html
                     ul.nav.navbar-nav
                         li.active
                             a(href="/") Home
-                        li
+                        //li
                             a(href="/about") About
-                        li
+                        //li
                             a(href="/contact") Contact
                     ul.nav.navbar-nav.navbar-right
                         li.dropdown
@@ -51,7 +51,7 @@ html
                                     li
                                         a(href="javascript: void(0);") List #5
 
-        .container(role="main", ng-controller="AppController as AppCtrl")
+        .container(role="main", ng-controller="MainController as MainCtrl")
             .jumbotron.clearfix
                 .pull-left
                     h1 Pros v Cons
