--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,16 +1,12 @@
-//
-   Created by shaun.katona on 7/7/2014.
-
 doctype html5
-html
+html(ng-app="ProsVCons", ng-controller="MainCtrl")
     head
         title Pros v Cons
-        //link(rel="stylesheet", href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css")
         link(rel="stylesheet", href="/stylesheets/bootstrap/bootstrap.min.css")
         link(rel="stylesheet", href="/stylesheets/bootstrap/bootstrap-theme.min.css")
         link(rel="stylesheet", href="/stylesheets/style.css")
         meta(name="viewport", content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no")
-    body(role="document", ng-app="ProsVCons", ng-controller="MainController as MainCtrl")
+    body(role="document")
         .navbar.navbar-inverse.navbar-fixed-top(role="navigation")
             .container
                 .navbar-header
@@ -36,7 +32,7 @@ html
                                     | Public
                                     span.badge {{lists.length}}
                                 li(ng-repeat="list in lists")
-                                    a(href="/list/{{list.id}}") {{list.title}}
+                                    a(href="/view/{{list._id}}") {{list.title}}
                                 li.divider
                                 li.dropdown-header
                                     | Private - not real
@@ -56,6 +52,7 @@ html
                     .glyphicon.glyphicon-thumbs-down
             block content
         script(type="text/javascript", src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.19/angular.min.js")
+        script(type="text/javascript", src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.19/angular-route.js")
         script(type="text/javascript", src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js")
         script(type="text/javascript", src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js")
         block scripts
