--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,12 +1,12 @@
 doctype html5
-html(ng-app="ProsVCons", ng-controller="MainCtrl")
+html(ng-app="ProsVCons")
     head
         title Pros v Cons
         link(rel="stylesheet", href="/stylesheets/bootstrap/bootstrap.min.css")
         link(rel="stylesheet", href="/stylesheets/bootstrap/bootstrap-theme.min.css")
         link(rel="stylesheet", href="/stylesheets/style.css")
         meta(name="viewport", content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no")
-    body(role="document")
+    body(role="document", ng-controller="MainCtrl")
         .navbar.navbar-inverse.navbar-fixed-top(role="navigation")
             .container
                 .navbar-header
