--- a/views/layout.jade
+++ b/views/layout.jade
@@ -20,6 +20,8 @@ html(ng-app="ProsVCons")
                     ul.nav.navbar-nav
                         li.active
                             a(href="/") Home
+                        li
+                            a(href="/about") About
                     ul.nav.navbar-nav.navbar-right
                         li.dropdown
                             a.dropdown-toggle(data-toggle="dropdown", href="javascript: void(0);")
