about page update

--- a/stylus/stylesheets/style.styl
+++ b/stylus/stylesheets/style.styl
@@ -63,6 +63,14 @@ body
   .ng-dirty.ng-invalid
     border-color red
 
+  p
+    em
+      strong
+        color hotpink
+
+  span.email
+    color orange
+
 @media (min-width: 980px)
   body
     div.alert
