--- a/views/partials/about.jade
+++ b/views/partials/about.jade
@@ -6,10 +6,19 @@
             | a decision myself, I decided to write my own and put it out there so others could use it.
         p
             | This is still very immature and I'm going to add user authentication so that you can save/edit/manage
-            | your own lists, but for now everything's just public, anyone can view anything, no one can delete anything,
-            | and you can only edit something before you save it.
+            | your own lists, but for now everything's just public:
+            ul
+                li anyone can view a list if they know the URL
+                li anyone can delete a saved list if they know the URL, and
+                li anyone can edit a list if they know the URL
         p
-            | If you have any comments, questions, or suggestions please send me an email to hello [at] prosvcons [dot] com.
+            em
+                strong
+                    | So for now, if you don't want people to be able to view, delete, or edit your list - DON'T GIVE THEM THE URL.
+        p
+            | If you have any comments, questions, or suggestions please send an email to
+            span.email
+                |  hello [at] prosvcons [dot] com.
         p
             | Thanks,
             br
