--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -61,6 +61,12 @@ body .prosAndCons .glyphicon-trash {
 body .ng-dirty.ng-invalid {
   border-color: #f00;
 }
+body p em strong {
+  color: #ff69b4;
+}
+body span.email {
+  color: #ffa500;
+}
 @media (min-width: 980px) {
   body div.alert {
     font-size: 20px;
