--- a/views/layout.jade
+++ b/views/layout.jade
@@ -6,7 +6,7 @@ html(ng-app="ProsVCons")
         link(rel="stylesheet", href="/stylesheets/bootstrap/bootstrap-theme.min.css")
         link(rel="stylesheet", href="/stylesheets/style.css")
         meta(name="viewport", content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no")
-    body(role="document", ng-controller="MainCtrl")
+    body(role="document", ng-controller="AppCtrl")
         .navbar.navbar-inverse.navbar-fixed-top(role="navigation")
             .container
                 .navbar-header
@@ -27,13 +27,13 @@ html(ng-app="ProsVCons")
                             a.dropdown-toggle(data-toggle="dropdown", href="javascript: void(0);")
                                 .glyphicon.glyphicon-th-list
                                 | My Lists
-                                span.badge {{lists.length}}
+                                span.badge {{data.lists.length}}
                                 span.caret
                             ul.dropdown-menu(role="menu")
                                 li.dropdown-header
                                     | Public
-                                    span.badge {{lists.length}}
-                                li(ng-repeat="list in lists")
+                                    span.badge {{data.lists.length}}
+                                li(ng-repeat="list in data.lists")
                                     a(href="/view/{{list._id}}") {{list.title}}
                                 li.divider
                                 li.dropdown-header
