--- a/views/partials/view.jade
+++ b/views/partials/view.jade
@@ -24,7 +24,7 @@
                         | {{pro.weight}}
             tfoot
                 tr
-                    th {{pros.length}} Pros
+                    th {{pros.length}} {{pros.length == 1 ? "Pro" : "Pros"}}
                     th.text-right(ng-show="showWeights") {{getProsWeightCount()}}
     #cons.col-sm-5.col-sm-offset-2.panel
         table.table
@@ -40,5 +40,5 @@
                         | {{con.weight}}
             tfoot
                 tr
-                    th {{cons.length}} Cons
+                    th {{cons.length}} {{cons.length == 1 ? "Con" : "Cons"}}
                     th.text-right(ng-show="showWeights") {{getConsWeightCount()}}
