--- a/views/index.jade
+++ b/views/index.jade
@@ -3,6 +3,7 @@ block scripts
     script(type="text/javascript", src="/scripts/app.js")
     script(type="text/javascript", src="/scripts/controllers/main.js")
     script(type="text/javascript", src="/scripts/controllers/view.js")
+    script(type="text/javascript", src="/scripts/controllers/edit.js")
     script(type="text/javascript", src="/scripts/services/Data.js")
 block content
     div(ng-view)
