added EDIT button to views, added CANCEL button to edits, included a bunch of passportjs packages

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -67,6 +67,9 @@ body p em strong {
 body span.email {
   color: #ffa500;
 }
+body button+button {
+  margin-left: 20px;
+}
 @media (min-width: 980px) {
   body div.alert {
     font-size: 20px;
