--- a/views/partials/view.jade
+++ b/views/partials/view.jade
@@ -42,3 +42,7 @@
                 tr
                     th {{cons.length}} {{cons.length == 1 ? "Con" : "Cons"}}
                     th.text-right(ng-show="showWeights") {{getConsWeightCount()}}
+.row
+    .col-sm-12.text-center
+        button.btn-lg.btn-primary(ng-click="go('/edit/' + _id)")
+            | Edit
