--- a/stylus/stylesheets/style.styl
+++ b/stylus/stylesheets/style.styl
@@ -74,6 +74,10 @@ body
   button+button
     margin-left 20px
 
+  #settings
+    button
+      margin-top 10px
+
 @media (min-width: 980px)
   body
     div.alert
