--- a/views/layout.jade
+++ b/views/layout.jade
@@ -22,6 +22,9 @@ html(ng-app="ProsVCons")
                             a(href="/") Home
                         li(ng-class="{active: $route.current.activeTab == 'about'}")
                             a(href="/about") About
+                    #settings.pull-right
+                        button.btn-sm.btn-primary(data-toggle="modal" data-target="#loginModal")
+                            | Login
                     ul.nav.navbar-nav.navbar-right
                         li.dropdown
                             a.dropdown-toggle(data-toggle="dropdown", href="javascript: void(0);")
