--- a/views/partials/login.jade
+++ b/views/partials/login.jade
@@ -1,6 +1,6 @@
 #loginModal.modal.fade(tabindex="-1" role="dialog" aria-labelledby="loginLabel" aria-hidden="true")
     .modal-dialog
-        .modal-content
+        .modal-content(ng-show="showLoginForm")
             .modal-header
                 button(type="button" class="close" data-dismiss="modal")
                     span(aria-hidden="true")&times;</span>
@@ -11,13 +11,40 @@
             .modal-body
                 form(novalidate role="form")
                     .form-group
-                        label(for="username") Username:
-                        input.form-control(type="text" name="username" id="username")
+                        label(for="email") Email:
+                        input.form-control(type="text" name="email" id="email")
                     .form-group
                         label(for="password") Password:
                         input.form-control(type="text" name="password" id="password")
             .modal-footer
+                span.pull-left
+                    | Don't have an account?&nbsp;
+                    a(href="javascript: void(0);" ng-click="showLoginForm=false") Sign up!
                 button(type="button" class="btn btn-default" data-dismiss="modal")
                     | Cancel
                 button(type="button" class="btn btn-primary")
                     | Login
+        .modal-content(ng-hide="showLoginForm")
+            .modal-header
+                button(type="button" class="close" data-dismiss="modal")
+                    span(aria-hidden="true")&times;</span>
+                    span.sr-only
+                        | Close
+                h4.modal-title#myModalLabel.text-center
+                    | Sign Up
+            .modal-body
+                form(novalidate role="form")
+                    .form-group
+                        label(for="email") Email:
+                        input.form-control(type="text" name="email" id="email")
+                    .form-group
+                        label(for="password") Password:
+                        input.form-control(type="text" name="password" id="password")
+            .modal-footer
+                span.pull-left
+                    | Already have an account?&nbsp;
+                    a(href="javascript: void(0);" ng-click="showLoginForm=true") Login!
+                button(type="button" class="btn btn-default" data-dismiss="modal")
+                    | Cancel
+                button(type="button" class="btn btn-primary")
+                    | Sign up
