small syntax error

--- a/views/partials/login.jade
+++ b/views/partials/login.jade
@@ -3,7 +3,7 @@
         .modal-content(ng-show="showLoginForm")
             .modal-header
                 button(type="button" class="close" data-dismiss="modal")
-                    span(aria-hidden="true")&times;</span>
+                    span(aria-hidden="true") &times;
                     span.sr-only
                         | Close
                 h4.modal-title#myModalLabel.text-center
@@ -27,7 +27,7 @@
         .modal-content(ng-hide="showLoginForm")
             .modal-header
                 button(type="button" class="close" data-dismiss="modal")
-                    span(aria-hidden="true")&times;</span>
+                    span(aria-hidden="true") &times;
                     span.sr-only
                         | Close
                 h4.modal-title#myModalLabel.text-center
